fixed event body spacing

--- a/components/calendar/calendar.module.scss
+++ b/components/calendar/calendar.module.scss
@@ -88,14 +88,14 @@ $cell-height-selected: 240px;
 .cellBody {
   width: $cell-width-no-event;
   height: $cell-height;
-  margin: 16px 8px 0px;
+  margin: 0px 8px 0px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
 
-  &:last-child {
-    margin-top: 0;
+  &:first-of-type {
+    margin-top: 16px;
   }
 
   &.withEvent {
